<resources>
    <string name="app_name">WeatherAppSM</string>
    <string name="cityName">City</string>
    <string name="temperature">Temperature</string>
    <string name="enterCityName">Enter city name</string>
    <string name="weather">Weather</string>
    <string name="warningTitle">Do not let weather surprise you</string>
    <string name="currentLocation">Current Location</string>
    <string name="warningMessage">Enable notifications to be always aware of the weather and avoid
    bad conditions!</string>
    <string name="measurements">Measurements</string>
    <string name="choose_language">Available languages</string>
    <string name="report_issue">Report Issue</string>
    <string name="request_feature">Request Feature</string>
    <string name="back">Back</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="very_high">Very High</string>
    <string name="extreme">Extreme</string>
    <string name="tempRange" translatable="false">20° / 15°</string>
    <string name="uvIndexHeader">UV Index</string>
    <string name="main_day_background_url" translatable="false">https://i.pinimg.com/564x/82/09/39/820939917d5be5f24e2e1c5de26457e6.jpg</string>
    <string name="main_night_background_url" translatable="false">https://i.pinimg.com/564x/65/aa/a7/65aaa7720b8ea21a6bda8db5d48aa5a4.jpg</string>
    <string name="search_night_background_url" translatable="false">https://i.pinimg.com/564x/97/5f/95/975f95d14d6bb779fd724349c550b7a5.jpg</string>
    <string name="search_day_background_url" translatable="false"><![CDATA[https://i.pinimg.com/564x/7d/59/b1/7d59b1c3da5d82d76472ce550a571076.jpg]]></string>
    <string name="uvIndexValue">Low</string>
    <string name="windHeader">WIND</string>
    <string name="settingsMenuTitle">Settings</string>
    <string name="measurementButtonName">Measurements</string>
    <string name="measurementButtonDescription">Change your measurement units</string>
    <string name="languageButtonName">Available languages</string>
    <string name="languageButtonDescription">List of available languages</string>
    <string name="issueButtonName">Report issue</string>
    <string name="issueButtonDescription">Report an issue with the app</string>
    <string name="featureButtonName">Request feature</string>
    <string name="featureButtonDescription">Request a new feature</string>
    <string name="notificationsButtonName">Notifications</string>
    <string name="notificationsButtonDescription">Set notification frequency</string>
    <string name="temperatureOptionName">Temperature</string>
    <string name="celsiusOption">Celsius</string>
    <string name="fahrenheitOption">Fahrenheit</string>
    <string name="windSpeedOptionName">Wind Speed</string>
    <string name="meterPerSecondOption">Meter/Second</string>
    <string name="kilometerPerHourOption">Kilometer/Hour</string>
    <string name="milesPerHourOption">Miles/Hour</string>
    <string name="pressureOptionName">Pressure</string>
    <string name="distanceOptionName">Distance</string>
    <string name="hectopascalOption">HectoPascal</string>
    <string name="millimeterOfMercuryOption">Millimeter of Mercury</string>
    <string name="kilometerOption">Kilometer</string>
    <string name="meterOption">Meter</string>
    <string name="mileOption">Mile</string>
    <string name="hourFormatOptionName">Hour Format</string>
    <string name="hour12Option">12 Hours</string>
    <string name="hour24Option">24 Hours</string>
    <string name="FavoriteLocation">Favorite Location</string>
    <string name="issue_report_hint">Enter your issue report here</string>
    <string name="reset_button">Reset</string>
    <string name="submit_button">Submit</string>
    <string name="feature_request_hint">Enter your suggested feature here</string>
    <string name="enableOptionName">Enable notifications</string>
    <string name="enableOption">Enable</string>
    <string name="disableOption">Disable</string>
    <string name="notificationsFrequencyOptionName">Notifications frequency</string>
    <string name="hour1Option">Every 1 hour</string>
    <string name="hour2Option">Every 2 hours</string>
    <string name="hour3Option">Every 3 hours</string>
    <string name="hour6Option">Every 6 hours</string>
    <string name="onceADayOption">Once a day</string>
    <string name="silentModeOptionName">Silent mode</string>
    <string name="silentModeDescription">Specify when to turn off notifications</string>
    <string name="locationPermissionDeniedMessage">App requires access to your location, please grant the permission in the app settings</string>
    <string name="search_error_message">Enter city name</string>
    <string name="feature_request_empty">Please enter your feature request</string>
    <string name="issue_report_empty">Please enter your issue report</string>
    <string name="uv_index">UV INDEX</string>
    <string name="sunset">SUNSET</string>
    <string name="wind">WIND</string>
    <string name="rain">RAIN</string>
    <string name="cloudy">CLOUDY</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="temperature_unit_changed">Changed temperature unit to:</string>
    <string name="hour_format_changed">Changed hour format to:</string>
    <string name="wind_speed_unit_changed">Changed wind speed unit to:</string>
    <string name="change_language">Do you want to change the language in device settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_name" translatable="false">weather_channel</string>
    <string name="channel_description">Allow the application to send notifications</string>
    <string name="notification_title">Today %s (%s)</string>
    <string name="notification_click_for_details">Click to see more details</string>
    <string name="sunrise">SUNRISE</string>
    <string name="enableNow">Enable now</string>
    <string name="fav_location_changed">Favorite location changed to: </string>
    <string name="issue_report_success">Created a new issue report:</string>
    <string name="issue_report_error">Error: issue report not added correctly</string>
    <string name="feature_request_success">Created a new feature request:</string>
    <string name="feature_request_error">Error: feature request not added correctly</string>
    <string name="resetSettingsButtonName">Reset settings</string>
    <string name="resetSettingsButtonDescription">Restore settings to default</string>
    <string name="reset_settings">Are you sure you want to restore settings to default?</string>


    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
    </string-array>
</resources>