<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        />

    <Button
        android:id="@+id/measurementsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurements"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/backButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/chooseLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/measurementsButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/reportIssueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_issue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chooseLanguageButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/requestFeatureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_feature"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/reportIssueButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/switchToNightModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_night_mode"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/requestFeatureButton"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
