<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/background_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/settingsMenuTitle"
                android:textColor="@color/white"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idLLNotifications"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="6"
                    android:background="@drawable/button_gradient">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/notificationsButtonName"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/button_secondary"
                            android:text="@string/notificationsButtonDescription"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/bell" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="6"
                    android:background="@drawable/button_gradient">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/enableOptionName"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white"/>

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/idRBEnableNotifications"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/enableOption"
                                android:textColor="@color/white"
                                android:checked="true"/>

                            <RadioButton
                                android:id="@+id/idRBDisableNotifications"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/disableOption"
                                android:textColor="@color/white"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/notificationsFrequencyOptionName"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/idRB1h"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/hour1Option"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/idRB2h"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hour2Option"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/idRB3h"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hour3Option"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/idRB6h"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hour6Option"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/idRBOnceADay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/onceADayOption"
                                android:textColor="@color/white" />


                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="6"
                    android:background="@drawable/button_gradient">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/silentModeOptionName"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/silentModeDescription"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/startTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:text="Start time: 18:00"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/endTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:text="End time: 06:00"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </LinearLayout>
</ScrollView>