<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idRLHome"
        android:visibility="visible">

        <ImageView
            android:id="@+id/idIVHomebg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/homebg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/idRLcityName">

            <TextView
                android:id="@+id/idTVcurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/FavoriteLocation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:fontFamily="@font/sfprodisplaymedium" />

            <TextView
                android:id="@+id/idTVcityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/idTVcurrentLocation"
                android:text="@string/cityName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAllCaps="true"
                app:fontFamily="@font/sfprodisplaybold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/idTVtemp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/idRLcityName"
            android:layout_marginBottom="60dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:fontFamily="@font/sfprodisplaymedium"/>

        <TextView
            android:id="@+id/idTVtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/idTVtempRange"
            android:layout_marginTop="10dp"
            android:text="Overcast"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:fontFamily="@font/sfprodisplaymedium" />

        <TextView
            android:id="@+id/idTVtempRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/idNSVscroll"
            android:text="20° / 15°"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sfprodisplaymedium"/>

        <include layout="@layout/scrollview_info"/>


    </RelativeLayout>

    <include layout="@layout/toolbar" />

</RelativeLayout>